# udarnik

./: Cargo.toml  build.rs
proto/: protocol.proto
src/: bridge.rs  client.rs  common.rs  keyman.rs  lib.rs  protocol.rs  server.rs  state.rs  tun.rs  utils.rs
src/bridge/: grpc.rs
src/protocol/: quorum.rs  recv_queue.rs  send_queue.rs
src/pvss/: dleq.rs  mod.rs  tests.rs
src/state/: apply_proposal.rs  bridge_state.rs  bridges.rs  bridges_in.rs  bridges_out.rs  convert.rs  error_reports.rs  input.rs  key_exchange.rs  master_messages.rs  new_stream.rs  session.rs  stream_state.rs  streams.rs
src/state/bridge_state/: bridge_outward.rs  bridge_poll.rs
src/state/stream_state/: admit.rs  feedback.rs  recv.rs  send_enqueue.rs
src/tun/: linux.rs
tests/: init  integral.rs  pri  pub  sign  verify
