[package]
name = "udarnik"
version = "0.1.0"
authors = ["Ding Xiang Fei <dingxiangfei2009@gmail.com>"]
edition = "2018"

[dependencies]
aead = "0.2.0"
async-stream = "0.2.0"
async-trait = "0.1.0"
bitvec = "0.16.0"
bytes = "0.5"
cfg-if = "0.1.0"
chacha20poly1305 = "0.3.1"
crossbeam = "0.7.0"
curve25519-dalek = "2"
derive_more = "0.15.0"
dyn-clone = "1.0"
failure = "0.1.5"
futures = "0.3.0"
generic-array = "0.12"
http = "0.2"
hyper = "0.12"
lazy_static = "1"
log = "0.4.0"
lru = "0.4.0"
pin-utils = "0.1.0-alpha.4"
prost = "0.6"
prost-types = "0.6"
rand = "0.7.2"
rand_chacha = "0.2.1"
rayon = "1.2.0"
serde_json = "1.0"
sha3 = "0.8.1"
slab = "0.4.0"
slog-envlogger = "2.2.0" 
structopt = "0.3.0"
tempfile = "3.0"
tower = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8.0"
features = ["v4"]

[dependencies.tonic]
version = "0.1.0"
features = ["tls"]

[dependencies.env_logger]
version = "0.5"

[dependencies.async-std]
version = "1.0"
features = ["attributes", "unstable"]

[dependencies.tokio]
version = "0.2.0"
features = ["macros", "io-driver", "time", "rt-threaded"]

[dependencies.sss]
git = "https://github.com/dingxiangfei2009/sss"
rev = "13708b40f223dcb7ee7abe7f303f5cc5ed4abe1c"

[build-dependencies]
prost-build = "0.6"
tonic-build = "0.1.0"

[profile.release]
debug = true