[package]
name = "udarnik"
version = "0.1.0"
authors = ["Ding Xiang Fei <dingxiangfei2009@gmail.com>"]
edition = "2018"

[dependencies]
aead = "0.3.0"
async-stream = "0.2.0"
async-trait = "0.1.0"
backtrace = "0.3"
bitvec = "0.17.0"
blake2 = "0.9.0"
bytes = "0.5"
cfg-if = "0.1.0"
chacha20poly1305 = "0.5.0"
crossbeam = "0.7.0"
crypto-mac = "0.8.0"
curve25519-dalek = "2"
derive_more = "0.15.0"
digest = "0.9.0"
dyn-clone = "1.0"
futures = "0.3.2"
generic-array = "0.14.0"
hmac = "0.8.0"
http = "0.2"
hyper = "0.13"
lazy_static = "1"
log = "0.4.0"
lru = "0.4.0"
mio = "0.6.0"
nix = "0.17"
pin-utils = "0.1.0"
prost = "0.6"
prost-types = "0.6"
rand = "0.7.2"
rand_chacha = "0.2.1"
rayon = "1.2.0"
serde_json = "1.0"
sha3 = "0.9.0"
slab = "0.4.0"
slog-envlogger = "2.2.0" 
structopt = "0.3.0"
tempfile = "3.0"
thiserror = "1.0"
tower = "0.3"
typenum = "1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8.0"
features = ["v4"]

[dependencies.tonic]
version = "0.2.0"
features = ["tls"]

[dependencies.env_logger]
version = "0.5"

[dependencies.async-std]
version = "1.6"
features = ["attributes", "unstable"]

[dependencies.tokio]
version = "0.2.0"
features = ["macros", "io-driver", "time", "rt-threaded"]

[dependencies.sss]
git = "https://github.com/dingxiangfei2009/sss"
rev = "af3cb38bcbc92094618cef68bf740dea242db11f"

[build-dependencies]
prost-build = "0.6"
tonic-build = "0.2.0"

[profile.release]
debug = true